--- a/MyPeronalWebSite/Views/Home/ProjectDetail.cshtml
+++ b/MyPeronalWebSite/Views/Home/ProjectDetail.cshtml
@@ -9,75 +9,7 @@
 
 
 
-    <div class="d-none d-xl-block">
-        <div class="tmp-sidebar-area tmp_side_bar">
-            <div class="inner">
-                <div class="top-area">
-                    <a href="index.html" class="logo">
-                        <img class="logo-dark" src="assets/images/logo/white-logo-reeni.png" alt="Reeni - Personal Portfolio HTML Template for developers and freelancers">
-                        <img class="logo-white" src="assets/images/logo/logo-white.png" alt="Reeni - Personal Portfolio HTML Template for developers and freelancers">
-                    </a>
-                    <div class="close-icon-area">
-                        <button class="tmp-round-action-btn close_side_menu_active">
-                            <i class="fa-sharp fa-light fa-xmark"></i>
-                        </button>
-                    </div>
-                </div>
-                <div class="content-wrapper">
-                    <div class="image-area-feature">
-                        <a href="index.html">
-                            <img src="assets/images/logo/man.png" alt="personal-logo">
-                        </a>
-                    </div>
-                    <h5 class="title mt--30">Freelancer delivering exceptional Webflow, and Next.js solutions.</h5>
-                    <p class="disc">
-                        I am a skilled freelancer specializing in Webflow development, Figma design, and Next.js projects. I deliver creative, dynamic, and user-centric web solutions.
-                    </p>
-                    <div class="short-contact-area">
-                        <!-- single contact information -->
-                        <div class="single-contact">
-                            <i class="fa-solid fa-phone"></i>
-                            <div class="information tmp-link-animation">
-                                <span>Call Now</span>
-                                <a href="#" class="number">+92 (8800) - 98670</a>
-                            </div>
-                        </div>
-                        <!-- single contact information end -->
-                        <!-- single contact information -->
-                        <div class="single-contact">
-                            <i class="fa-solid fa-envelope"></i>
-                            <div class="information tmp-link-animation">
-                                <span>Mail Us</span>
-                                <a href="#" class="number">example@info.com</a>
-                            </div>
-                        </div>
-                        <!-- single contact information end -->
-                        <!-- single contact information -->
-                        <div class="single-contact">
-                            <i class="fa-solid fa-location-crosshairs"></i>
-                            <div class="information tmp-link-animation">
-                                <span>My Address</span>
-                                <span class="number">66 Broklyant, New York 3269</span>
-                            </div>
-                        </div>
-                        <!-- single contact information end -->
-                    </div>
-                    <!-- social area start -->
-                    <div class="social-wrapper mt--20">
-                        <span class="subtitle">find with me</span>
-                        <div class="social-link">
-                            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                            <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                        </div>
-                    </div>
-                    <!-- social area end -->
-                </div>
-            </div>
-        </div>
-        <a class="overlay_close_side_menu close_side_menu_active" href="javascript:void(0);"></a>
-    </div>
+
 
     <div class="d-block d-xl-none">
         <div class="tmp-popup-mobile-menu">
@@ -252,7 +184,7 @@
                                             <path fill="currentColor" d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
                                         </svg>
                                     </span>
-                                    <span class="github-text">View on GitHub</span>
+                                    <span class="github-text">@Model.Resources.FirstOrDefault(x => x.NavigationName == "Github").Value</span>
                                     <span class="github-arrow">
                                         <svg viewBox="0 0 24 24" width="16" height="16">
                                             <path fill="currentColor" d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z" />
@@ -470,7 +402,7 @@
 
         </div>
     </div>
-   
+
     <!-- Start Footer Area  -->
     <footer class="footer-area footer-style-one-wrapper  tmp-section-gap">
         <div class="container">
@@ -479,7 +411,7 @@
                     <div class="col-lg-5 col-md-6">
                         <div class="single-footer-wrapper border-right mr--20">
 
-                            <p class="description"><span>Get Ready</span> To <br> Create Great</p>
+                            <p class="description"><span>@Model.Resources.FirstOrDefault(x => x.NavigationName == "İletisimSloganDetay").Value</span> </p>
                             <form action="#" class="newsletter-form-1 mt--40">
                                 <input type="email" placeholder="Email Adress">
                                 <span class="form-icon"><i class="fa-regular fa-envelope"></i></span>
