--- a/MyPeronalWebSite/Views/Partial/NavbarPartial.cshtml
+++ b/MyPeronalWebSite/Views/Partial/NavbarPartial.cshtml
@@ -1,6 +1,81 @@
 ﻿@model MyPeronalWebSite.Models.ViewModel.NavbarViewModel
+@using MyPeronalWebSite.Models
+
+
 
 <header class="tmp-header-area-start header-one header--sticky header--transparent">
+    <div class="tmp-sidebar-area tmp_side_bar">
+        <div class="inner">
+            <div class="top-area">
+                <a href="index.html" class="logo">
+                    <img class="logo-dark" src="/Content/images/logo/white-logo-reeni.png" alt="Reeni - Personal Portfolio HTML Template for developers and freelancers">
+                    <img class="logo-white" src="/Content/images/logo/logo-white.png" alt="Reeni - Personal Portfolio HTML Template for developers and freelancers">
+                </a>
+                <div class="close-icon-area">
+                    <button class="tmp-round-action-btn close_side_menu_active">
+                        <i class="fa-sharp fa-light fa-xmark"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="content-wrapper">
+                <div class="image-area-feature">
+                    <a href="index.html">
+                        <img src="/Content/images/logo/man.png" alt="personal-logo">
+                    </a>
+                </div>
+                <h5 class="title mt--30">Freelancer delivering exceptional Webflow, and Next.js solutions.</h5>
+                <p class="disc">
+                    @Model.Tbl_AboutMe.ShortDescription
+                </p>
+                <div class="short-contact-area">
+                    <!-- single contact information -->
+                    <div class="single-contact">
+                        <i class="fa-solid fa-phone"></i>
+
+                        <div class="information tmp-link-animation">
+                            <span>Call Now</span>
+                            <a href="#" class="number">@Model.Tbl_AboutMe.PhoneNumber</a>
+                        </div>
+                    </div>
+                    <!-- single contact information end -->
+                    <!-- single contact information -->
+                    <div class="single-contact">
+                        <i class="fa-solid fa-envelope"></i>
+                        <div class="information tmp-link-animation">
+
+                            <a href="mailto:@Model.Tbl_AboutMe.EmailAdress">@Model.Tbl_AboutMe.EmailAdress</a>
+                        </div>
+
+                    </div>
+                    <!-- single contact information end -->
+                    <!-- single contact information -->
+                    <div class="single-contact">
+                        <i class="fa-solid fa-location-crosshairs"></i>
+                        <div class="information tmp-link-animation">
+                            <span>My Address</span>
+                            <span class="number">@Model.Tbl_AboutMe.Adress</span>
+                        </div>
+                    </div>
+                    <!-- single contact information end -->
+                </div>
+                <!-- social area start -->
+                <div class="social-wrapper mt--20">
+                    <span class="subtitle">find with me</span>
+                    <div class="social-link">
+
+                        <a href="@Model.Tbl_AboutMe.LinkedlnURL"><i class="fa-brands fa-linkedin-in"></i></a>
+
+                        <a href="@Model.Tbl_AboutMe.GithubURL"><i class="fa-brands fa-github"></i></a>
+                    </div>
+                </div>
+                <!-- social area end -->
+            </div>
+        </div>
+    </div>
+    <div class="d-none d-xl-block">
+
+        <a class="overlay_close_side_menu close_side_menu_active" href="javascript:void(0);"></a>
+    </div>
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
@@ -11,41 +86,55 @@
                             <img class="logo-white" src="/Content/images/logo/logo-white.png" alt="Reeni - Personal Portfolio HTML Template for developers and freelancers">
                         </a>
                     </div>
+                    @{
+                        var currentUrl = Context.Request.Path.ToString();
+                        var selectedLanguageId = 1; // Örnek: 1 = Türkçe, 3 = İngilizce
+                        var menuItems = Model.Tbl_Navbar;
+
+                        if (menuItems != null)
+                        {
+                            menuItems = menuItems
+                                .Where(x => x.IsActive && x.LanguageID == selectedLanguageId)
+                                .OrderBy(x => x.Turn)
+                                .ToList();
+                        }
+                        else
+                        {
+                            menuItems = new List<MyPeronalWebSite.Models.VT.Tbl_Navbar>(); // boş liste
+                        }
+                    }
+
+
                     <nav class="tmp-mainmenu-nav d-none d-xl-block">
                         <ul class="tmp-mainmenu">
-                            <li>
-                                <a href="@Url.Action("Index", "Home")">
-                                    Anasayfa
-                                </a>
-
-                            </li>
-                            <li>
-                                <a href="#about">About</a>
-                            </li>
-
-
-                            <li class="has-dropdown">
-                                <a href="#projects">
-                                    Project
-                                    <i class="fa-regular fa-chevron-down"></i>
-                                </a>
-                                
-                            </li>
-                            <li>
-                                <a href="#get-in-touch">Contact</a>
-                            </li>
+                            @foreach (var item in menuItems)
+                            {
+                                var isActive = currentUrl == item.URL ? "current" : "";
+                                <li class="@isActive">
+                                    <a href="@item.URL">@item.Title</a>
+                                </li>
+                            }
                         </ul>
-
                     </nav>
                     <div class="tmp-header-right">
                         <div class="social-share-wrapper d-none d-md-block">
                             <div class="social-link">
-                                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                                <a href="@Model.Tbl_AboutMe.LinkedlnURL"><i class="fa-brands fa-linkedin-in"></i></a>
+
+                                <a href="@Model.Tbl_AboutMe.GithubURL"><i class="fa-brands fa-github"></i></a>
                             </div>
                         </div>
+
+                        <!-- Dil seçme yapısı eklendi -->
+                        <div class="language-selector">
+                            <select class="language-dropdown">
+                                <option value="tr">Türkçe</option>
+                                <option value="en">English</option>
+                                <option value="de">Deutsch</option>
+                                <option value="fr">Français</option>
+                            </select>
+                        </div>
+
                         <div class="actions-area">
                             <div class="tmp-side-collups-area d-none d-xl-block">
                                 <button class="tmp-menu-bars tmp_button_active"><i class="fa-regular fa-bars-staggered"></i></button>
@@ -55,6 +144,47 @@
                             </div>
                         </div>
                     </div>
+
+                    <style>
+                        /* Dil seçici için stil */
+                        .language-selector {
+                            margin: 0 15px;
+                        }
+
+                        .language-dropdown {
+                            padding: 6px 10px;
+                            border: 1px solid #ddd;
+                            border-radius: 4px;
+                            background-color: #f8f9fa;
+                            color: #333;
+                            font-size: 14px;
+                            cursor: pointer;
+                            outline: none;
+                            transition: all 0.3s ease;
+                        }
+
+                            .language-dropdown:hover {
+                                border-color: #aaa;
+                                background-color: #fff;
+                            }
+
+                            .language-dropdown:focus {
+                                border-color: #4a90e2;
+                                box-shadow: 0 0 0 2px rgba(74, 144, 226, 0.2);
+                            }
+
+                        /* Mevcut yapıyla uyumlu hale getirmek için */
+                        .tmp-header-right {
+                            display: flex;
+                            align-items: center;
+                            justify-content: flex-end;
+                        }
+
+                        .social-share-wrapper, .language-selector, .actions-area {
+                            display: flex;
+                            align-items: center;
+                        }
+                    </style>
                 </div>
             </div>
         </div>
