--- a/MyPeronalWebSite/Views/Shared/_Layout.cshtml
+++ b/MyPeronalWebSite/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
 
 <!DOCTYPE html>
 
-<html>
+<html dir="ltr" lang="@(Request.Cookies["lang"]?.Value ?? "tr")">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -21,6 +21,9 @@
     <link rel="stylesheet" href="/Content/css/vendor/bootstrap.min.css">
     <!-- custom css -->
     <link rel="stylesheet" href="/Content/css/style.css">
+    <!-- jQuery CDN (Google) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
 </head>
 
 <body class="color-primary-2nd">
