Contact info has been successfully deleted

--- a/MyPeronalWebSite/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/MyPeronalWebSite/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -195,7 +195,7 @@
                             <a href="#" class="nav-link">
                                 <i class="nav-icon fas fa-tachometer-alt"></i>
                                 <p>
-                                    Dashboard
+                                    AnaSayfa
                                     <i class="right fas fa-angle-left"></i>
                                 </p>
                             </a>
@@ -203,46 +203,55 @@
                         </li>
                         <li class="nav-item">
                             <a href="../widgets.html" class="nav-link">
-                               
+
                                 <p>
                                     Hakkımda
-                                    
+
                                 </p>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a href="../widgets.html" class="nav-link">
-                                
+
                                 <p>
                                     İletişim
-                                    
+
                                 </p>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a href="../widgets.html" class="nav-link">
-                                
+
                                 <p>
                                     Projelerim
-                                    
+
                                 </p>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a href="../widgets.html" class="nav-link">
-                                
+
+                                <p>
+                                    Proje Detayları
+
+                                </p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="../widgets.html" class="nav-link">
+
                                 <p>
                                     Kullandığım Teknolojiler
-                                   
+
                                 </p>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a href="../widgets.html" class="nav-link">
-                                
+
                                 <p>
                                     Kullanıcı Bilgileri
-                                    
+
                                 </p>
                             </a>
                         </li>
