--- a/MyPeronalWebSite/Areas/Admin/Views/Admin_Project/Index.cshtml
+++ b/MyPeronalWebSite/Areas/Admin/Views/Admin_Project/Index.cshtml
@@ -1,112 +1,134 @@
 ﻿@model IEnumerable<MyPeronalWebSite.Models.VT.Tbl_Projects>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Projeler";
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
-<section class="content">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-12">
-                <div class="card">
-                    <div class="card-header bg-success">
-                        <h3 class="card-title text-white">Projeler</h3>
-                        <div class="card-tools">
-                            @Html.ActionLink("Yeni Proje Ekle", "Create", null, new { @class = "btn btn-light" })
-                        </div>
-                    </div>
-
-                    <div class="card-body table-responsive">
-                        <table id="projeTable" class="table table-bordered table-hover">
-                            <thead class="thead-dark">
-                                <tr>
-                                    <th>ID</th>
-                                    <th>Dil ID</th>
-                                    <th>@Html.DisplayNameFor(model => model.First().ProjectTitle)</th>
-                                    <th>@Html.DisplayNameFor(model => model.First().ProjectImg)</th>
-                                    <th>@Html.DisplayNameFor(model => model.First().ProjectDescription)</th>
-                                    <th>@Html.DisplayNameFor(model => model.First().ProjectEntryTitle)</th>
-                                    <th>@Html.DisplayNameFor(model => model.First().ProjectEntryDescription)</th>
-                                    <th>@Html.DisplayNameFor(model => model.First().GithubURL)</th>
-                                    <th>@Html.DisplayNameFor(model => model.First().isActive)</th>
-                                    <th>İşlemler</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                @foreach (var item in Model)
-                                {
-                                    <tr id="row-@item.ID">
-                                        <td>@item.ID</td>
-                                        <td>@item.Tbl_Language.ShortTitle</td>
-                                        <td>@item.ProjectTitle</td>
-                                        <td>
-                                            @if (!string.IsNullOrEmpty(item.ProjectImg))
-                                            {
-                                                <img src="@item.ProjectImg" alt="Proje Görseli" style="max-height: 50px;" class="img-thumbnail" />
-                                            }
-                                            else
-                                            {
-                                                <span class="text-muted">Görsel Yok</span>
-                                            }
-                                        </td>
-                                        <td class="truncate-text">
-                                            @(item.ProjectDescription?.Length > 50
-                                                ? item.ProjectDescription.Substring(0, 50) + "..."
-                                                : item.ProjectDescription)
-                                        </td>
-                                        <td>@item.ProjectEntryTitle</td>
-                                        <td class="truncate-text">
-                                            @(item.ProjectEntryDescription?.Length > 50
-                                                ? item.ProjectEntryDescription.Substring(0, 50) + "..."
-                                                : item.ProjectEntryDescription)
-                                        </td>
-                                        <td>
-                                            @if (!string.IsNullOrEmpty(item.GithubURL))
-                                            {
-                                                <a href="@item.GithubURL" target="_blank" class="btn btn-sm btn-dark">
-                                                    <i class="fab fa-github"></i> GitHub
-                                                </a>
-                                            }
-                                            else
-                                            {
-                                                <span class="text-muted">Bağlantı Yok</span>
-                                            }
-                                        </td>
-                                        <td>
-                                            @if (item.isActive == true)
-                                            {
-                                                <span class="badge badge-success">Aktif</span>
-                                            }
-                                            else
-                                            {
-                                                <span class="badge badge-secondary">Pasif</span>
-                                            }
-                                        </td>
-                                        <td>
-                                            <div class="btn-group btn-group-sm">
-                                                @Html.ActionLink("Düzenle", "Edit", new { id = item.ID }, new { @class = "btn btn-info" })
-                                                <button class="btn btn-danger delete-btn" data-id="@item.ID">
-                                                    <i class="fas fa-trash-alt"></i> Sil
-                                                </button>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                }
-                            </tbody>
-                        </table>
-                    </div>
-
-                    <div class="card-footer clearfix">
-                        <div class="float-right">
-                            @Html.ActionLink("Yeni Proje Ekle", "Create", null, new { @class = "btn btn-success" })
-                        </div>
-                    </div>
+<div class="content-wrapper">
+    <!-- Content Header (Page header) -->
+    <section class="content-header">
+        <div class="container-fluid">
+            <div class="row mb-2">
+                <div class="col-sm-6">
+                    <h1>Projeler</h1>
+                </div>
+                <div class="col-sm-6">
+                    <ol class="breadcrumb float-sm-right">
+                        <li class="breadcrumb-item"><a href="#">Home</a></li>
+                        <li class="breadcrumb-item active">Projeler</li>
+                    </ol>
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
+
+    <!-- Main content -->
+    <section class="content">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12">
+
+                    <div class="card">
+                        <div class="card-header bg-success">
+                            <h3 class="card-title text-white">Projeler</h3>
+                            <div class="card-tools">
+                                @Html.ActionLink("Yeni Proje Ekle", "Create", null, new { @class = "btn btn-light" })
+                            </div>
+                        </div>
+
+                        <div class="card-body table-responsive">
+                            <table id="projeTable" class="table table-bordered table-hover">
+                                <thead class="thead-dark">
+                                    <tr>
+                                        <th>ID</th>
+                                        <th>Dil ID</th>
+                                        <th>@Html.DisplayNameFor(model => model.First().ProjectTitle)</th>
+                                        <th>@Html.DisplayNameFor(model => model.First().ProjectImg)</th>
+                                        <th>@Html.DisplayNameFor(model => model.First().ProjectDescription)</th>
+                                        <th>@Html.DisplayNameFor(model => model.First().ProjectEntryTitle)</th>
+                                        <th>@Html.DisplayNameFor(model => model.First().ProjectEntryDescription)</th>
+                                        <th>@Html.DisplayNameFor(model => model.First().GithubURL)</th>
+                                        <th>@Html.DisplayNameFor(model => model.First().isActive)</th>
+                                        <th>İşlemler</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @foreach (var item in Model)
+                                    {
+                                        <tr id="row-@item.ID">
+                                            <td>@item.ID</td>
+                                            <td>@item.Tbl_Language.ShortTitle</td>
+                                            <td>@item.ProjectTitle</td>
+                                            <td>
+                                                @if (!string.IsNullOrEmpty(item.ProjectImg))
+                                                {
+                                                    <img src="@item.ProjectImg" alt="Proje Görseli" style="max-height: 50px;" class="img-thumbnail" />
+                                                }
+                                                else
+                                                {
+                                                    <span class="text-muted">Görsel Yok</span>
+                                                }
+                                            </td>
+                                            <td class="truncate-text">
+                                                @(item.ProjectDescription?.Length > 25
+                                                    ? item.ProjectDescription.Substring(0, 25) + "..."
+                                                    : item.ProjectDescription)
+                                            </td>
+                                            <td>@item.ProjectEntryTitle</td>
+                                            <td class="truncate-text">
+                                                @(item.ProjectEntryDescription?.Length > 25
+                                                    ? item.ProjectEntryDescription.Substring(0, 25) + "..."
+                                                    : item.ProjectEntryDescription)
+                                            </td>
+                                            <td>
+                                                @if (!string.IsNullOrEmpty(item.GithubURL))
+                                                {
+                                                    <a href="@item.GithubURL" target="_blank" class="btn btn-sm btn-dark">
+                                                        <i class="fab fa-github"></i> GitHub
+                                                    </a>
+                                                }
+                                                else
+                                                {
+                                                    <span class="text-muted">Bağlantı Yok</span>
+                                                }
+                                            </td>
+                                            <td>
+                                                @if (item.isActive == true)
+                                                {
+                                                    <span class="badge badge-success">Aktif</span>
+                                                }
+                                                else
+                                                {
+                                                    <span class="badge badge-secondary">Pasif</span>
+                                                }
+                                            </td>
+                                            <td>
+                                                <div class="btn-group btn-group-sm">
+                                                    @Html.ActionLink("Düzenle", "Edit", new { id = item.ID }, new { @class = "btn btn-info" })
+                                                    <button class="btn btn-danger delete-btn" data-id="@item.ID">
+                                                        <i class="fas fa-trash-alt"></i> Sil
+                                                    </button>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
+
+                        <div class="card-footer clearfix">
+                            <div class="float-right">
+                                @Html.ActionLink("Yeni Proje Ekle", "Create", null, new { @class = "btn btn-success" })
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
 
 <!-- DataTables & SweetAlert -->
 <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/dataTables.bootstrap4.min.css">
@@ -145,7 +167,6 @@
 
 <script>
     $(document).ready(function () {
-        // DataTable değişkeni tanımlandı
         var table = $('#projeTable').DataTable({
             scrollX: true,
             autoWidth: false,
@@ -159,10 +180,8 @@
             language: { url: '//cdn.datatables.net/plug-ins/1.13.4/i18n/tr.json' }
         });
 
-        // Silme butonuna tıklama
         $(document).on('click', '.delete-btn', function (e) {
             e.preventDefault();
-            debugger
             var id = $(this).data('id');
             var row = $(this).closest('tr');
             var $btn = $(this);
